fixed z-index

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,3 @@
   height: 100vh;
   text-align: center;
 }
-
-.switch input {
-  z-index: 10;
-}
