--- a/src/DaySky.css
+++ b/src/DaySky.css
@@ -5,7 +5,7 @@
   position: absolute;
   box-shadow: 0 0 10px 10px #fff;
   animation: rotation 600s infinite linear;
-  z-index: 1;
+  z-index: 0;
 }
 
 @keyframes rotation {
